# quint-ml-experiments

./: .gitignore  README.org  dune-project  notes.org  um_quint.opam  um_quint.opam.locked
.github/workflows/: main.yml
flib/: dune
js/: dune  main.ml
lib/: dune  fdep.ml  fragment.ml  run.ml  state.ml  term.ml
test/: dune  quint-ml-demo.t
tryf/: Quint.Ex.TicTacToe.fst  Quint.Map.fst  Quint.Ordered.fst  Quint.Rng.Internal.fst  Quint.Rng.Ops.fst  Quint.Rng.fst  Quint.Set.fst  Quint.Show.fst  Quint.State.Sig.fst  Quint.State.fst  Quint.State.fsti  Quint.State.fsti.bak  Quint.Util.fst  Term.fst  dune
