(env
  (dev
    (flags (:standard -w -27-33-8))))

(library
 (name lang)
 ;; The FStar standard library
 (libraries fstar.lib)
  ;; A requisite for the standard lib
 (preprocess (pps ppx_deriving_yojson)))

; Automate generation of these
(rule
 (targets
  Quint_Ex_TicTacToe.ml
  Quint_Ordered.ml
  Quint_Set.ml
  Quint_Map.ml)
 (deps
  (glob_files ../tryf/*.fst))
 (action (run fstar.exe --codegen OCaml --include ../tryf ../tryf/Quint.Ex.TicTacToe.fst)))
