(env
  (dev
   ;  TODO I'm not sure 20 should be ignored, it is
   ; Error (warning 20 [ignored-extra-argument]): this argument will not be used by the function.
    (flags (:standard -w -27-33-8-20))))

(library
 (name lang)
 ;; The FStar standard library
 (libraries fstar.lib)
  ;; A requisite for the standard lib
 (preprocess (pps ppx_deriving_yojson)))

; Automate generation of these
(rule
 (targets
  Quint_Ex_TicTacToe.ml
  Quint_Ordered.ml
  Quint_Set.ml
  Quint_Map.ml
  Quint_Rng.ml
  Quint_Rng_Ops.ml
  Quint_Rng_Internal.ml
  Quint_Util.ml
  Quint_State.ml
  Quint_State_Sig.ml)
 (deps
  (glob_files ../tryf/*.fst))
 (action (run fstar.exe --codegen OCaml --include ../tryf ../tryf/Quint.Ex.TicTacToe.fst)))
