(env
  (dev
    (flags (:standard -w -27-33-8))))

(library
 ;; The name of the executable to build (matches the Hello.ml file)
 (name lang)
 ;; The FStar standard library
 (libraries fstar.lib)
  ;; A requisite for the standard lib
 (preprocess (pps ppx_deriving_yojson)))

;; Transpile to OCaml code
(rule
 (targets Term.ml)
 (deps
  (:term Term.fst)
  (:set Quint.Set.fst))
 (action (run fstar.exe --codegen OCaml --extract Term %{term} --record_hints)))
